experimental/secret_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-private-pod
spec:
  containers:
    - name: private
      image: sameprivateregistry.azurecr.io/sample-private-org/sample-bootcamp:latest
  imagePullSecrets:
    - name:  multipleimages # same-experimentname gitlab-auth
